# hello-wgpu_rs

./: Cargo.toml  README.md  build.rs
src/: camera.rs  lib.rs  main.rs  mesh.rs  model.rs  resources.rs  shader.wgsl  texture.rs  utils.rs  vertex.rs
src/shaders/: light.wgsl  shader.wgsl
