[package]
name = "hello-wgpu_rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.70"
bytemuck = { version = "1.13.1", features = ["derive"] }
cfg-if = "1.0.0"
cgmath = "0.18.0"
env_logger = "0.10.0"
image = "0.24.6"
log = "0.4.17"
pollster = "0.3.0"
tobj = { version = "3.2.5", features = ["async"] }
wgpu = "0.15.1"
winit = "0.28.3"

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.7"
console_log = "1.0.0"
wgpu = { version = "0.15.1", features = ["webgl"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
reqwest = { version = "0.11" }
web-sys = { version = "0.3", features = [
    "Document",
    "Window",
    "Element",
    "Location",
] }

[build-dependencies]
anyhow = "1.0.70"
fs_extra = "1.3.0"
glob = "0.3.1"
